--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
+    "buffer": "^5.4.3",
     "core-js": "^3.1.3",
-    "ng-zorro-antd": "^8.5.0",
     "echarts": "^4.2.1",
     "mockjs": "^1.0.1-beta3",
+    "ng-zorro-antd": "^8.5.0",
     "ngx-amap": "^2.2.0",
     "ngx-echarts": "^4.1.0",
-    "ngx-ueditor": "^2.1.3"
+    "ngx-ueditor": "^2.1.3",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.18",
