--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@auth0/angular-jwt": "^3.0.1",
     "buffer": "^5.4.3",
     "core-js": "^3.1.3",
     "echarts": "^4.2.1",
@@ -28,6 +29,7 @@
     "ngx-echarts": "^4.1.0",
     "ngx-ueditor": "^2.1.3",
     "rxjs": "~6.4.0",
+    "ts-md5": "^1.2.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
