--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
             ],
             "styles": [
               "src/styles.less",
-              "src/assets/styles/ng-zorro.less",
+              "src/assets/styles/theme-default.less",
               "src/assets/styles/global.less"
             ],
             "scripts": [
@@ -133,7 +133,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "src/assets/styles/theme-default.less",
+              "src/assets/styles/global.less"
             ],
             "scripts": []
           }
